--- a/public/global.css
+++ b/public/global.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300..900&display=swap');
-@import url('./style/clickers.css');
 @import url('./style/button.css');
+@import url('./style/clicker.css');
 @import url('./style/input.css');
+@import url('./style/selection.css');
 
 :root {
 	/* -- Fonts -- */
